--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -2,7 +2,7 @@ FROM nginx:latest
 
 RUN apt update && apt install -y aria2
 
-COPY httpd.conf /etc/nginx/conf.d/default.conf
+COPY .docker/httpd.conf /etc/nginx/conf.d/default.conf
 
 WORKDIR /mnt
 
