--- a/.helm/minter-snapshot-storage/templates/deployment.yaml
+++ b/.helm/minter-snapshot-storage/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     matchLabels:
       app.kubernetes.io/name: {{ .Chart.Name }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+  serviceName: "{{ .Chart.Name }}-headless"
   template:
     metadata:
       labels:
