--- a/.helm/minter-snapshot-storage/templates/ingress.yaml
+++ b/.helm/minter-snapshot-storage/templates/ingress.yaml
@@ -1,22 +1,22 @@
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: {{ .Chart.Name }}
-  labels:
-    app.kubernetes.io/name: {{ .Chart.Name }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-spec:
-  rules:
-  - host: {{ .Values.ingress.hostName }}
-    http:
-      paths:
-      - backend:
-          serviceName: {{ .Chart.Name }}
-          servicePort: http
-        path: {{ .Values.ingress.path }}
-  tls:
-  - hosts:
-    - {{ .Values.ingress.hostName }}
-    secretName: {{ .Values.ingress.secretName }}
+{{/*apiVersion: extensions/v1beta1*/}}
+{{/*kind: Ingress*/}}
+{{/*metadata:*/}}
+{{/*  name: {{ .Chart.Name }}*/}}
+{{/*  labels:*/}}
+{{/*    app.kubernetes.io/name: {{ .Chart.Name }}*/}}
+{{/*    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}*/}}
+{{/*    app.kubernetes.io/instance: {{ .Release.Name }}*/}}
+{{/*    app.kubernetes.io/managed-by: {{ .Release.Service }}*/}}
+{{/*spec:*/}}
+{{/*  rules:*/}}
+{{/*  - host: {{ .Values.ingress.hostName }}*/}}
+{{/*    http:*/}}
+{{/*      paths:*/}}
+{{/*      - backend:*/}}
+{{/*          serviceName: {{ .Chart.Name }}*/}}
+{{/*          servicePort: http*/}}
+{{/*        path: {{ .Values.ingress.path }}*/}}
+{{/*  tls:*/}}
+{{/*  - hosts:*/}}
+{{/*    - {{ .Values.ingress.hostName }}*/}}
+{{/*    secretName: {{ .Values.ingress.secretName }}*/}}
