--- a/.docker/httpd.conf
+++ b/.docker/httpd.conf
@@ -7,8 +7,9 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        autoindex on;
-        try_files $uri /index.html$is_args$args;
+       autoindex on;
+       autoindex_localtime on;
+       autoindex_exact_size off;
     }
 
     #error_page  404              /404.html;
