--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,6 +3,8 @@ FROM nginx:latest
 RUN apt update && apt install -y aria2
 
 COPY .docker/httpd.conf /etc/nginx/conf.d/default.conf
+COPY .docker/downlaod_dump.sh /downlaod_dump.sh
+RUN mkdir /mnt && chown www-data /mnt
 
 WORKDIR /mnt
 
